--- a/products/index.html
+++ b/products/index.html
@@ -100,7 +100,21 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="_1">业务产品</h1>
-<p>hi~</p></div>
+<h3 id="_2"><strong>产品划分</strong></h3>
+<ul>
+<li>中银金科事业一部银行系产品共40个，子产品59个，其中信贷管理10个，风险管理29个，管理决策20个  </li>
+<li>非银行系涉及中银基金资管平台、理财子数据中心、中银基金数据中心、债转股、智能估值系统  </li>
+<li>场景服务领域涉及银发、部队两个场景金融开发  </li>
+</ul>
+<h3 id="_3"><strong>产品介绍</strong></h3>
+<h5 id="_4"><strong>智能风控系列</strong></h5>
+<p>五大智能风控应用产品，为信用风险领域全面识别、防范和化解风险提供一站式解决方案及服务
+中银智能风控产品经历中国银行信用风险领域从传统风控到智能风控建设全过程，投产功能覆盖业界主流智能风控应用场景，并在建设过程中引入融合多家外部咨询公司的专业成果，已具备成熟的产品化输出能力！</p>
+<ul>
+<li>
+<h6 id="360"><strong>“万象”风险360全景视图</strong></h6>
+企业风险信息综合服务产品，包含工商、司法、舆情、投融资、宏观、行内数据提炼标签等各维度信息，并依托智能风控体系提供各类分析应用。</li>
+</ul></div>
             </div>
         </div>
 
