--- a/teams/index.html
+++ b/teams/index.html
@@ -100,7 +100,9 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="_1">部门团队</h1>
-<p>Hi~</p></div>
+<h6 id="200831600"><strong>中银金融科技有限公司前身为软件中心上海分中心，2008年成立于上海，承担中国银行三分之一产品的研发、质量控制、应用维护等工作。公司以青年员工为主，平均年龄31岁，拥有技术工程师队伍近600人。</strong></h6>
+<h3 id="_2"><strong>荣誉奖项</strong></h3>
+<p><img alt="重大奖项" src="../images/%E5%A5%96%E9%A1%B9.png" /></p></div>
             </div>
         </div>
 
