--- a/work/index.html
+++ b/work/index.html
@@ -92,6 +92,10 @@
             
             <li class="nav-item" data-level="1"><a href="#_1" class="nav-link">工作相关</a>
               <ul class="nav flex-column">
+            <li class="nav-item" data-level="2"><a href="#_2" class="nav-link">入职事务</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -100,7 +104,60 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="_1">工作相关</h1>
-<p>Hi~</p></div>
+<h2 id="_2"><strong>入职事务</strong></h2>
+<h4 id="_3"><strong>一、工作时间</strong></h4>
+<ul>
+<li>工时实行每周五天工作制，工作时间为周一至周五：上午8:30-12:00，下午13:00-17:30  </li>
+<li>员工上下班均需要在打卡点使用工牌打卡    </li>
+</ul>
+<h4 id="_4"><strong>二、入职事务办理</strong></h4>
+<p>您入职后需要办理以下事务：
+- 签订各类合同（联系人：刘福礼38973705，18616918953）
+- 领取门禁卡（联系人：锁晓璇38973713 13916649609）
+- 领取办公电脑设备（联系人：宋小龙38973941 18221968107）
+- 领取办公电话（联系人：锁晓璇38973713 13916649609）  </p>
+<h4 id="_5"><strong>三、入职网络、办公软件设置</strong></h4>
+<ul>
+<li>在您领取的电脑中，已集成安装了一些基本软件，请根据《桌面部署安装软件》进行域用户、NOTES等配置。</li>
+<li>一些您个人可能需要使用的软件，我们也已更新至上述路径下，您可以按需进行安装。</li>
+<li>桌面部署安装软件路径：\22.188.8.8\常用软件\新员工桌面部署相关</li>
+<li>门户网站地址（公司内网访问）：http://swp.dms.bocoa.com/swp/index  </li>
+</ul>
+<h4 id="_6"><strong>四、办公用品及办公电话</strong></h4>
+<ul>
+<li>您需要的办公用品一般由团队统一进行申请，请咨询团队其他小伙伴，了解团队内运作规则，并进行办公用品申领。</li>
+<li>办公电话请填写《软件中心上海分中心办公电话需求申请单》后由新员工负责人统一收齐后发送部门邮箱进行统一申请，全体同事电话可以在门户主页查询。</li>
+<li>电话需求申请单路径：\22.188.8.8\常用软件\新员工桌面部署相关\桌面部署安装软件\分中心办公电话申请使用工作流程  </li>
+</ul>
+<h4 id="_7"><strong>五、工资发放相关事宜</strong></h4>
+<ul>
+<li>每月7日左右按公司相关制度标准发放该月工资。员工如对工资有异议，请找人事部门相关人员咨询。</li>
+<li>工资卡若意外丢失，请第一时间通知人事、财务部门人员。</li>
+<li>工资为保密信息，请勿交流、议论。  </li>
+</ul>
+<h4 id="_8"><strong>六、工时登记</strong></h4>
+<ul>
+<li>工作包应向所在项目的项目经理进行申领，并在工作登记系统 - 工作包管理 - 工作待签收列表处进行签收。工作登记系统可在门户网站首页点击工时登记进入。</li>
+<li>工时登记要求请参阅系统右上角-登记规范。</li>
+<li>每月20日为工时统计日，20日后无法对之前漏登的工时进行补登。  </li>
+</ul>
+<h4 id="_9"><strong>七、员工培训</strong></h4>
+<ul>
+<li>您在入职后将根据总行、软件中心及部门的统一安排，进行公司文化、规章制度、专业技能等方面的培训和学习实践。</li>
+<li>在学习完成后将有一次考试，对您阶段性学习成果进行验证。  </li>
+</ul>
+<h4 id="_10"><strong>八、试用期转正材料</strong></h4>
+<ul>
+<li>您试用期期间归属团队将为您安排一名督导进行试用期工作指导和检验。</li>
+<li>根据《中国银行股份有限公司软件中心督导管理办法》，填写《中国银软件中心督导情况登记表》，于您入职一周内提交部门。</li>
+<li>根据《中国银行股份有限公司软件中心员工试用期管理办法》完成其试用期考核，于试用期结束前五个工作日提交部门。</li>
+<li>相关表单可在软件中心 中心门户-人事管理-人事制度处下载。</li>
+<li>新员工试用期管理联系人：刘福礼（38973705，18616918953）  </li>
+</ul>
+<h4 id="_11">园区地图</h4>
+<p><img alt="园区图" src="../images/%E5%9B%AD%E5%8C%BA%E5%9B%BE.png" /></p>
+<h4 id="_12">地理位置</h4>
+<p><img alt="地理位置" src="../images/%E5%9C%B0%E7%90%86%E4%BD%8D%E7%BD%AE.png" /></p></div>
             </div>
         </div>
 
