--- a/index.html
+++ b/index.html
@@ -92,14 +92,6 @@
             
             <li class="nav-item" data-level="1"><a href="#welcome-to" class="nav-link">Welcome to 金融事业一部</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#commands" class="nav-link">Commands</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
-            <li class="nav-item" data-level="2"><a href="#project-layout" class="nav-link">Project layout</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
               </ul>
             </li>
         </ul>
@@ -108,22 +100,12 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="welcome-to">Welcome to 金融事业一部</h1>
-<p><img alt="园区图" src="images/%E5%9B%AD%E5%8C%BA%E5%9B%BE.png" /></p>
-<p>curl 'https://jaspervdj.be/lorem-markdownum/markdown.txt' &gt; docs/about.md</p>
-<p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
-<h2 id="commands">Commands</h2>
-<ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
-<li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
-<li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs -h</code> - Print help message and exit.</li>
-</ul>
-<h2 id="project-layout">Project layout</h2>
-<pre><code>mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-</code></pre></div>
+<p>亲爱的同事：<br />
+您好！<br />
+欢迎加入中银金科金融事业一部！
+本指南是为了帮助您更快更好的熟悉工作环境，请仔细阅读。<br />
+如有问题可以咨询相关负责人。<br />
+祝您在公司工作愉快！</p></div>
             </div>
         </div>
 
@@ -207,5 +189,5 @@ docs/
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-06-29 03:58:55.025673+00:00
+Build Date UTC : 2020-06-29 08:37:52.639369+00:00
 -->
