--- a/life/index.html
+++ b/life/index.html
@@ -12,12 +12,9 @@
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/font-awesome.min.css" rel="stylesheet">
         <link href="../css/base.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css">
 
         <script src="../js/jquery-1.10.2.min.js" defer></script>
-        <script src="../js/bootstrap.min.js" defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script> 
+        <script src="../js/bootstrap.min.js" defer></script> 
     </head>
 
     <body>
@@ -96,7 +93,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#_3" class="nav-link">租房信息</a>
+            <li class="nav-item" data-level="2"><a href="#_4" class="nav-link">租房信息</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -117,7 +114,49 @@
 
 <h1 id="_1">生活贴士</h1>
 <h2 id="_2"><strong>班车信息</strong></h2>
-<h2 id="_3"><strong>租房信息</strong></h2>
+<h4 id="_3"><strong>上班班车路线具体站点地图</strong></h4>
+<ul>
+<li>世纪大道路线<ul>
+<li>7:20世纪大道站点
+<img alt="世纪大道站点" src="../images/%E7%8F%AD%E8%BD%A6%E7%82%B9%E5%9C%B0%E5%9B%BE/%E4%B8%96%E7%BA%AA%E5%A4%A7%E9%81%93%E8%B7%AF%E7%BA%BF/%E4%B8%96%E7%BA%AA%E5%A4%A7%E9%81%93%E7%AB%99%E7%82%B9.png" /></li>
+</ul>
+</li>
+<li>龙阳路路线<ul>
+<li>7:20龙阳路站点</li>
+</ul>
+</li>
+<li>川沙路路线<ul>
+<li>7:30地铁2号线川沙站2号出口处的艳阳路公交站</li>
+<li>7:45地铁2号线华夏东路站5号出口处</li>
+</ul>
+</li>
+<li>金海路路线（7:50、8:00共两班）<ul>
+<li>7:50、8:00地铁12号线金海路站出口处的公交车站</li>
+<li>7:55、8:05顾唐路（金海路）公交站</li>
+</ul>
+</li>
+<li>玉兰香苑路线<ul>
+<li>7:45玉兰香苑二期C区(社区卫生服务中心对面)</li>
+<li>7:48张衡路（中段）</li>
+<li>7:50张东路（近溢江路）</li>
+</ul>
+</li>
+<li>唐陆公路公交站（创新西路）路线<ul>
+<li>7:45唐陆公路(近创新西路口）</li>
+<li>7:50人才公寓东门</li>
+</ul>
+</li>
+<li>唐陆公路公交站（唐镇路）路线<ul>
+<li>7:45唐陆公路公交站</li>
+<li>7:50人才公寓东门</li>
+</ul>
+</li>
+<li>金科路路线（7:30、7:35、7:40共三班）<ul>
+<li>地铁2号线金科路站4号出口的公交车站</li>
+</ul>
+</li>
+</ul>
+<h2 id="_4"><strong>租房信息</strong></h2>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
